--- a/.gitignore
+++ b/.gitignore
@@ -96,6 +96,9 @@ buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
 
+# Distribution folder (generated)
+MadMaze-Distribution/
+
 # Gradle
 .gradle/
 gradle-app.setting
